# fuji

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-dmg-background.sh  bump.sh
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: ptp-bridge-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: index.rs  lib.rs  main.rs  metadata.rs  models.rs
src-tauri/src/camera/: detection.rs  mod.rs  ptp.rs
src-tauri/src/clip/: engine.rs  image.rs  index.rs  mod.rs  model.rs  text.rs
src-tauri/src/commands/: camera.rs  cleanup.rs  config.rs  import.rs  library.rs  mod.rs  ratings.rs  thumbnails.rs
src-tauri/src/raf/: preview.rs
src-tauri/swift/: ptp_bridge.swift
src/assets/: main.css
src/components/: AppHeader.vue  BackgroundActivityPill.vue  CameraImportPrompt.vue  EmptyState.vue  ImageCard.vue  ImageCompare.vue  ImageGrid.vue  ImageViewer.vue  ImportProgress.vue  LibraryCard.vue  LibraryGrid.vue  LibraryHeader.vue  LibraryViewer.vue  StarRating.vue  UpdateButton.vue
src/composables/: useHoverPreload.ts  useKeyboardNav.ts  useSyncedZoom.ts  useUpdater.ts  useViewTransition.ts
src/lib/: commands.ts  minimap.ts  selectionSummary.ts
src/stores/: app.ts  gallery.ts  library.ts
src/types/: index.ts
