[package]
name = "fuji-culler"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuji_culler_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
walkdir = "2"
byteorder = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }
regex = "1"
rayon = "1"
tokio = { version = "1", features = ["fs", "sync"] }
log = "0.4"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
