[package]
name = "fuji-culler"
version = "0.2.0"
edition = "2021"

[lib]
name = "fuji_culler_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Off by default: the quantized CLIP models regress badly on the CoreML EP, so
# it is opt-in only (`--features coreml`) for experimentation. See clip/engine.rs.
coreml = ["ort/coreml"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
walkdir = "2"
byteorder = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }
regex = "1"
rayon = "1"
tokio = { version = "1", features = ["fs", "sync"] }
log = "0.4"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# Optimize the release binary: whole-program LTO, a single codegen unit for
# better cross-crate inlining, and stripped symbols for a smaller bundle. These
# mainly benefit the ONNX/CLIP inference hot paths. (No panic = "abort" — the
# updater/plugin stack expects unwinding.)
[profile.release]
lto = true
codegen-units = 1
strip = true

# Build dependencies (ort, image, tokenizers, …) with full optimization even in
# dev so debug-mode indexing/search is not painfully slow. Our own crate stays
# at the dev default for fast rebuilds.
[profile.dev.package."*"]
opt-level = 3
